# cba-pipeline-public

./: README.md
containernet/: .gitignore  CONTRIBUTORS  Extract_KPIs.sh  Vagrantfile  segmentsizes.csv  setup.py
containernet/ansible/: install.yml
containernet/eval/: Dockerfile  NDN_Plots_1.ipynb  NDN_Plots_2.ipynb  README.md  docker-compose.yml  eval_plot_lcn.ipynb
containernet/examples/: docker_ndn.py
containernet/mininet/: node.py  topo.py
containernet/ndn-containers/: .gitignore  README.md
containernet/ndn-containers/dash.js/: .jscsrc  Gruntfile.js  package-lock.json  package.json  temp.sh
containernet/ndn-containers/misc/: Migration 2.0 · Dash-Industry-Forum_dash.js Wiki.mhtml
containernet/ndn-containers/ndn_headless-player/: .vimrc  Dockerfile  README.md  docker-compose.yml  ndn-entrypoint.sh  nfd.conf  rebuild-ndn-icp.sh  rebuild-player.sh  restart.sh  run_bandits.py
containernet/ndn-containers/ndn_headless-player/code/ndn-dash/libdash/qtsampleplayer/: CMakeLists.txt  main.cpp
containernet/ndn-containers/ndn_headless-player/code/ndn-dash/libdash/qtsampleplayer/Managers/: MultimediaManager.cpp  MultimediaManager.h  MultimediaStream.cpp  MultimediaStream.h
containernet/ndn-containers/ndn_headless-player/code/ndn-dash/libdash/qtsampleplayer/UI/: DASHPlayer.cpp  DASHPlayerNoGUI.cpp  DASHPlayerNoGUI.h
containernet/ndn-containers/ndn_headless-player/code/ndn-dash/libdash/qtsampleplayer/libdashframework/Adaptation/: AbstractAdaptationLogic.h  AdaptationLogicFactory.cpp  AdaptationLogicFactory.h  AlwaysLowestLogic.cpp  AlwaysLowestLogic.h  Bola.cpp  Bola.h  BufferBasedAdaptation.cpp  BufferBasedAdaptation.h  BufferBasedAdaptationWithRateBased.cpp  BufferBasedAdaptationWithRateBased.h  BufferBasedThreeThresholdAdaptation.cpp  BufferBasedThreeThresholdAdaptation.h  FOOBAR.cpp  FOOBAR.h  IAdaptationLogic.h  LinUcb.cpp  LinUcb.h  ManualAdaptation.cpp  ManualAdaptation.h  Panda.cpp  Panda.h  RateBasedAdaptation.cpp  RateBasedAdaptation.h  SparseBayesUcb.cpp  SparseBayesUcb.h  SparseBayesUcbOse.cpp  SparseBayesUcbOse.h  SparseBayesUcbSvi.cpp  SparseBayesUcbSvi.h
containernet/ndn-containers/ndn_headless-player/code/ndn-dash/libdash/qtsampleplayer/libdashframework/Buffer/: MediaObjectBuffer.h
containernet/ndn-containers/ndn_headless-player/code/ndn-dash/libdash/qtsampleplayer/libdashframework/Input/: DASHManager.cpp  DASHManager.h  DASHReceiver.cpp  DASHReceiver.h  MediaObject.cpp  NDNConnection.cpp  NDNConnection.h  NDNConnectionConsumerApi.cpp  NDNConnectionConsumerApi.h
containernet/ndn-containers/ndn_headless-player/code/ndn-dash/libdash/qtsampleplayer/libdashframework/Portable/: MultiThreading.h
containernet/ndn-containers/ndn_player/: .babelrc  .gitignore  .yo-rc.json  README.md  bower.json  gulpfile.babel.js  package-lock.json  package.json
containernet/ndn-containers/ndn_repo/: .dockerignore  Dockerfile  ReadMe.md  TODO-CREATENFDCONFIG  Vagrantfile  clean_all_docker.sh  copy_bbb_repong.sh  copy_files_to_ndnfs.sh  copy_files_to_repong.sh  docker-compose.yml  init_container.sh  ndn-entrypoint.sh  nfd.conf  repo-ng.conf  repo-ng.sh  requirements.txt  setup.py  supervisor.conf
containernet/ndn-containers/ndn_ui/: .yo-rc.json  README.md  package.json
containernet/ndn-containers/poster/: statistic_id252853_global-mobile-video-traffic-2015-2020.xlsx
containernet/ndn-containers/raspberry_pi/: 000-default.conf  README.md  ndn  ndn.sh  setup_nfd.sh  start_ndn_fs.sh
containernet/ndn-experiment/: Untitled.ipynb  docker_ndn.py  dynamicLinkChange.py  info  locks.py  start.sh  topology.py  trafficControl.py
util/: generate_topology.py
visualization/: Visualizations.ipynb  figure_configuration_ieee_standard.py  make_fairness_graph.py
visualization/.ipynb_checkpoints/: Visualizations-checkpoint.ipynb
(+2856 files in other folders)
